--- a/src/scss/partials/_buttons.scss
+++ b/src/scss/partials/_buttons.scss
@@ -8,9 +8,19 @@ a.btn {
   width: auto;
   @include prefix('transition',all 0.2s ease-in-out);
 
+  &+a.btn {
+    margin-left: $margin-default/4;
+  }
+
   &.btn-solid {
     border: 2px solid $color-accent1;
     background-color: $color-accent1-dark;
+    color: $color-white;
+  }
+
+  &.btn-ghost {
+    border: 2px solid $color-accent1;
+    background-color: transparent;
     color: $color-white;
   }
 
